--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,8 @@
 ---
 applications:
-- name: rabbitmq2
+- name: zeremit
   memory: 512M
   instances: 1
-  path: target/rabbitmq_log4j.war
+  path: target/spring-envoronment-variables.war
   env:
-     username: dlxydxgl
-  services:
-     - rabbitmq-spring
+     username: zeremit
