--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,8 @@ applications:
   instances: 1
   path: target/spring-envoronment-variables.war
   env:
-     username: dlxydxgl
+     host: host
+     port: 5672
+     virtualhost: virtualhost
+     username: user
+     password: password
