--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,13 @@
 
 	<display-name>Spring Web MVC Application</display-name>
 
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!--<listener>-->
+		<!--<listener-class>com.kharevich.web.Log4jConfigListener</listener-class>-->
+	<!--</listener>-->
+
 	<servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -21,8 +28,6 @@
 		<param-value>WEB-INF/mvc-dispatcher-servlet.xml</param-value>
 	</context-param>
 
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+
 
 </web-app>
