--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 
     <properties>
         <spring.version>4.1.6.RELEASE</spring.version>
+        <spring.cloud.version>1.1.1.RELEASE</spring.cloud.version>
         <jaxrs.json.provider.version>2.5.3</jaxrs.json.provider.version>
     </properties>
 
@@ -34,6 +35,18 @@
             <artifactId>spring-rabbit</artifactId>
             <version>1.4.5.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-spring-service-connector</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-cloudfoundry-connector</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -70,7 +83,19 @@
             <artifactId>amqp-client</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>cloudfoundry-runtime</artifactId>
+            <version>0.8.1</version>
+        </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>org.springframework.maven.milestone</id>
+            <name>Spring Framework Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/milestone</url>
+        </repository>
+    </repositories>
 
 
     <build>
