--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
 - name: log-demo
   memory: 512M
   instances: 1
-  path: target/spring-envoronment-variables.war
+  path: target/rabbitmq_log.war
   env:
      host: host
      port: 5672
