--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
         <jaxrs.json.provider.version>2.5.3</jaxrs.json.provider.version>
     </properties>
 
-    <groupId>com.kharevich</groupId>
-    <artifactId>spring-environment-variables</artifactId>
+    <groupId>com.altoros</groupId>
+    <artifactId>RabbitMQ-LogAppender-For-CF</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -99,7 +99,7 @@
 
 
     <build>
-        <finalName>spring-envoronment-variables</finalName>
+        <finalName>rabbitmq_log</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -119,7 +119,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <warName>spring-envoronment-variables</warName>
+                    <warName>rabbitmq_log</warName>
                 </configuration>
             </plugin>
         </plugins>
